# Candat

./: README.MD
BASE/: base.f90  build.sh  copyToRPI.sh  lora_baremetal.c  main.f90
SAT/: CMakeLists.txt
